--- a/css/stylesheets/contact.css
+++ b/css/stylesheets/contact.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nav-item {
-    margin-left: 35px;
+    margin-left: 55px;
 }
 
 .top-content {
@@ -78,7 +78,7 @@ body {
 }
 
 
-@media screen  and (max-width: 700px){
+@media screen  and (max-width: 800px){
 
     .navbar {
         float: none;
@@ -101,9 +101,9 @@ body {
 
     .image-text {
         position: relative;
-        top: 45%; 
+        top: 45%;
         left: 25%;
-    }
+    } 
 
     .map-section {
         padding-top: 20px;
@@ -123,7 +123,8 @@ body {
     }
 }
 
-@media screen and (orientation: landscape) and (max-width: 700px){
+@media screen and (orientation: landscape) and (max-width: 736px){
+    
     .navbar {
         float: none;
         background-color: black;
@@ -145,7 +146,9 @@ body {
 
     .image-text {
         position: relative;
-    }
+        top: 45%;
+        left: 25%;
+    } 
 
     .map-section iframe{
         height: 300px;
@@ -159,7 +162,8 @@ body {
     }
 }
 
-@media screen and (orientation: landscape) and (min-width: 731px) and (max-width: 823px) {
+@media screen and (orientation: landscape) and (min-width: 736px) and (max-width: 1000px) {
+    
     .navbar {
         float: none;
         background-color: black;
@@ -183,8 +187,8 @@ body {
         position: relative;
         top: 45%;
         left: 25%;
-    }
-
+    } 
+    
     .map-section { 
         padding-top: 60px;
     }
