--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,6 @@
 body {
     background-color: white !important;
     color: black !important;
-    /* background-color:  !important; */
 }
 
 .navbar {
@@ -10,7 +9,7 @@ body {
 }
 
 .nav-item {
-    margin-left: 35px;
+    margin-left: 55px;
 }
 
 .top-content {
@@ -164,6 +163,14 @@ body {
     margin-bottom: 10px;
 }
 
+.image-gallery button {
+    border-style: none;
+}
+
+.image-gallery button i {
+    color: pink;
+}
+
 .menu-title {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -303,11 +310,8 @@ body {
     margin-top: 20px;
 }
 
-
-@media screen and (max-width: 700px)
-{
-
-@media screen and (max-width:600px) {
+/*original 700px */
+@media screen and (max-width: 800px) {
 
     .navbar {
         float: none;
@@ -326,7 +330,7 @@ body {
     }
 
     .image-text {
-        top: 45%;
+        top: 40%;
         left: 50%;
     }
 
@@ -469,7 +473,6 @@ body {
     }
 
     .boxes {
-        /* margin-top: 150px; */
         margin-top: 30px;
     }
 
@@ -482,7 +485,7 @@ body {
     }
 }
 
-@media screen and (orientation: landscape) and (max-width: 700px){ 
+@media screen and (orientation: landscape) and (max-width: 736px){ 
    
     .navbar {
         float: none;
@@ -497,7 +500,6 @@ body {
         position: relative;
         height: 380px;
         background-attachment: initial;
-
     }
 
     .image-text {
@@ -507,8 +509,7 @@ body {
 
     .image-text {
         position: relative;
-        top: 45%;
-        left: 50%;
+        top: 80%;
     }
 
     .image-text span {
@@ -550,19 +551,23 @@ body {
 
     .box-content {
         padding-top: 40px;
-        height: 580px;
+        height: 510px;
     }
 
     .title-box .pref {
+        margin-right: 10px;
         /* font-size: 85px; */
     }
 
     .title-box .sub {
+        float: left;
         font-size: 18px;
     }
 
     .title-box .title {
         font-size: 35px;
+        float: left;
+        width: 60%;
     }
 
     .icon {
@@ -588,8 +593,6 @@ body {
     .image-gallery {
         height: 100%;
     }
-
-    .image-gallery {}
 
     .menu-title {
         padding-top: 40px;
@@ -634,7 +637,6 @@ body {
    .background {
         height: 650px;
         background-position: center;
-    height: 650px;
     }
 
     .bakery-info {
@@ -667,9 +669,9 @@ body {
     }
 }
 
-/* FOR IPHONE X AND PIXEL2 XL LANDSCAPE */
-
-@media screen and (orientation: landscape) and (min-width: 731px) and (max-width: 823px){
+/* FOR IPHONE X AND PIXEL2 XL LANDSCAPE */ 
+/* 800px */
+@media screen and (orientation: landscape) and (min-width: 800px) and (max-width: 1366px){
 
     .navbar {
         float: none;
@@ -683,6 +685,186 @@ body {
     .top-content {
         position: relative;
         height: 380px;
+        background-attachment: initial;
+    }
+
+    .image-text {
+        top: 45%;
+        left: 50%;
+    }
+
+    .image-text span {
+        /* font-size: 17px; */
+        font-size: 20px;
+        animation: 2s text-slide;
+    }
+
+    @keyframes text-slide {
+        from {
+            margin-right: 10%;
+        }
+
+        to {
+            margin-right: 0;
+        }
+    }
+
+    .image-text h1 {
+        font-size: 25px;
+    }
+
+    .image-text p {
+        font-size: 20px;
+        animation: 2s p-slide;
+    }
+
+    @keyframes p-slide {
+        from {
+            margin-right: -20%;
+        }
+
+        to {
+            margin-right: 0;
+        }
+    }
+
+    /* Box Content */
+
+    .box-content {
+        padding-top: 40px;
+        height: 310px;
+    }
+
+    /* .title-box .pref {
+        font-size: 95px;
+    } */
+
+    .title-box .sub {
+        float: left;
+        font-size: 18px;
+    }
+
+    .title-box .title {
+        font-size: 30px;
+        width: 30%;
+    }
+
+    .icon {
+        height: 60px;
+        float: none;
+        text-align: center;
+    }
+
+    .icon-box {
+        margin-top: 30px;
+    }
+
+    
+    .icon-box .title h3 {
+        font-size: 20px;
+    }
+
+    .icon-box .text p {
+        font-size: 15px;
+        letter-spacing: 1px;
+    }
+    
+    /* Dessert Gallery Section */
+
+    .image-gallery {
+        height: 100%;
+    }
+
+    .menu-title {
+        padding-top: 40px;
+        padding-bottom: 10px;
+    }
+
+    .menu-title h3 {
+        font-size: 25px;
+    }
+
+    .menu-title p {
+        font-size: 15px;
+    }
+
+
+    .aside-gallery-image {
+        float: none;
+        width: 100%;
+        height: 250px;
+    }
+
+    .aside-gallery-image .card {
+        background-color: transparent;
+        width: 100%;
+        top: 50%;
+        left: 0;
+    }
+
+    /* .aside-gallery-image img {
+        height: 600px;
+        width: 450px;
+    } */
+
+    .card {
+        margin-top: 20px;
+        margin-bottom: 0;
+        margin-left: 0;
+    }
+
+   /* Bakery Contact Info */
+
+   .background {
+       height: 250px;
+    /* background-position: center; */
+    }
+
+    .bakery-info {
+        color: white;
+        text-align: center;
+        font-family: "Sriracha";
+    }
+
+    .bakery-info-contact h3 {
+        color: #f5c181;
+        font-size: 25px;
+    }
+
+    .bakery-info-contact p {
+        font-size: 15px;
+    }
+
+    .boxes {
+        /* margin-top: 150px; */
+        margin-top: 30px;
+    }
+
+    .bakery-info-icon {
+        margin-bottom: 20px;
+    }
+
+    .bakery-info-text {
+        margin-top: 20px;
+    }
+}
+
+
+/* Tablets */
+@media screen and (min-width: 768px) and (max-width: 1366px){
+    
+    .navbar {
+        float: none;
+        background-color: black;
+    }
+
+    .nav-item {
+        margin-left: 0;
+    } 
+
+    .top-content {
+        position: relative;
+        height: 1024px;
         background-attachment: initial;
 
     }
@@ -731,29 +913,35 @@ body {
 
     .box-content {
         padding-top: 40px;
-        height: 580px;
+        height: 310px;
     }
 
-    .title-box .pref {
-        /* font-size: 85px; */
-    }
+    /* .title-box .pref {
+        font-size: 95px;
+    } */
 
     .title-box .sub {
+        float: left;
         font-size: 18px;
     }
 
     .title-box .title {
-        font-size: 35px;
+        float: left;
+        font-size: 30px;
+        width: 30%;
     }
 
     .icon {
         height: 60px;
+        float: none;
+        text-align: center;
     }
 
     .icon-box {
         margin-top: 30px;
     }
 
+    
     .icon-box .title h3 {
         font-size: 20px;
     }
@@ -762,7 +950,7 @@ body {
         font-size: 15px;
         letter-spacing: 1px;
     }
-
+    
     /* Dessert Gallery Section */
 
     .image-gallery {
@@ -810,8 +998,8 @@ body {
    /* Bakery Contact Info */
 
    .background {
-        height: 650px;
-        background-position: center;
+       height: 250px;
+    /* background-position: center; */
     }
 
     .bakery-info {
@@ -841,7 +1029,26 @@ body {
     .bakery-info-text {
         margin-top: 20px;
     }
-}
+
 }
 
+@media screen and (min-width: 1024px) and (max-width: 2800px) {  
+    
+    .top-content {
+        height: 1050px;
+    }
+    
+      /* Dessert Gallery Section */
 
+      .image-gallery {
+        height: 100%;
+    }
+
+@media screen and (min-width: 1366px) {  
+
+    .title-box .title {
+        font-size: 30px;
+        width: 40%;
+        float: left;
+    }
+}
