--- a/css/stylesheets/menu.css
+++ b/css/stylesheets/menu.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nav-item {
-    margin-left: 35px;
+    margin-left: 55px;
 }
 
 .top-content {
@@ -108,7 +108,7 @@ body {
     }
 } 
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
 
     .navbar {
         float: none;
@@ -128,27 +128,15 @@ body {
         font-size: 30px;
         width: 150%;
     }
-
     .image-text {
         position: relative;
         top: 45%; 
         left: 25%;
     }
-
 }
 
+@media screen and (orientation : landscape) and (max-width : 736px){
 
-
-
-@media screen  and (max-width : 700px) and (orientation : landscape) {
-
-    .top-content {
-        height: 370px;
-    }
-
-}
-
-@media screen and (orientation: landscape) and (min-width: 731px) and (max-width: 823px) {
     .navbar {
         float: none;
         background-color: black;
@@ -159,17 +147,48 @@ body {
     }
 
     .top-content {
-        height: 420px;
         background-attachment: initial;
+        height: 370px;
     }
 
     .top-content h1 {
         font-size: 30px;
         width: 150%;
     }
+    .image-text {
+        position: relative;
+        top: 45%;
+        left: 25%;
+    }
+}
 
+@media screen and (orientation: landscape) and (min-width: 736px) and (max-width: 1000px){ 
+
+    .navbar {
+        float: none;
+        background-color: black;
+    }
+
+    .nav-item {
+        margin-left: 0;
+    }
+
+    .top-content {
+        background-attachment: initial;
+        height: 420px;
+    }
+
+    .top-content h1 {
+        font-size: 30px;
+        width: 150%;
+    }
     .image-text {
         position: relative;
         top: 45%; 
         left: 25%;
     }
+}
+
+/* @media screen and (min-width: 768) and (max-width: 1024px){
+
+} */
